[package]
name = "demikernel-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.4"
ssh2 = "0.9.4"
yaml-rust = "0.4.5"
log = "0.4.20"
flexi_logger = "0.25.6"
http = "0.2.9"


[patch.crates-io]
ssh2 = { path = "/home/ppenna/projects/ssh2-rs" }
